RSC-26: Описание нового rest метода в Swagger.
